# Proyecto2-ImageRecover_Rent_a_Car

./: AdjGraph.cpp  AdjGraph.h  CMakeLists.txt  GenAlg.vcxproj  README.md  genAlgorithm.cpp  genAlgorithm.h  genome.cpp  genome.h  main.cpp
Headers/: MainWindow.h
Interface/Headers/: ImageWindow.h  MainWindow.h  RentWindow.h
Interface/Sources/: ImageWindow.cpp  MainWindow.cpp  RentWindow.cpp  main.cpp
Proyecto2/: Project2.pro  Proyecto2.pro  genAlgorithm.cpp  genAlgorithm.h  genome.cpp  genome.h  graph.cpp  graph.h  irwindow.cpp  irwindow.h  irwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rcwindow.cpp  rcwindow.h  rcwindow.ui
Sources/: MainWindow.cpp  main.cpp
build-Proyecto2-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Proyecto2.Debug  object_script.Proyecto2.Release  ui_irwindow.h  ui_mainwindow.h  ui_rcwindow.h
build-Proyecto2-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/debug/: moc_irwindow.cpp  moc_mainwindow.cpp  moc_rcwindow.cpp  qrc_Resources.cpp
